--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,8 +1,20 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <!-- <style name="Base.Theme.Breeze" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.Breeze" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="colorPrimary">@color/dark_blue</item>
         <item name="colorPrimaryContainer">@color/dark_blue</item>
         <item name="colorOnPrimary">@color/white</item>
-    </style> -->
+    </style>
+
+    <style name="Theme.Breeze" parent="Base.Theme.Breeze" />
+
+    <style name="SoftCorner">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">20dp</item>
+        <item name="color">@color/white</item>
+    </style>
+
+    <style name="circular">
+        <item name="cornerSize">50%</item>
+    </style>
 </resources>
