--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -67,6 +67,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="130dp"
             android:layout_marginBottom="10dp"
+            android:backgroundTint="@color/purple"
             android:clickable="true"
             android:focusable="true"
             app:layout_constraintBottom_toBottomOf="@+id/profileImage"
