--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -14,7 +14,9 @@
         android:id="@+id/ivBackground"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/sign_up" />
+        android:contentDescription="TODO"
+        app:srcCompat="@drawable/sign_up"
+        tools:ignore="ContentDescription,HardcodedText" />
 
     <TextView
         android:id="@+id/tvLogin"
@@ -24,7 +26,8 @@
         android:textStyle="bold"
         android:textSize="40sp"
         android:layout_margin="30dp"
-        android:text="Sign up," />
+        android:text="Sign up,"
+        tools:ignore="HardcodedText" />
 
     <TextView
         android:id="@+id/tvDesc"
@@ -35,7 +38,8 @@
         android:textSize="30sp"
         android:layout_marginHorizontal="30dp"
         android:layout_marginTop="80dp"
-        android:text="to continue" />
+        android:text="to continue"
+        tools:ignore="HardcodedText" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -50,7 +54,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.153"
-            app:srcCompat="@drawable/sign_up_vector" />
+            app:srcCompat="@drawable/sign_up_vector"
+            tools:ignore="ContentDescription" />
 
         <LinearLayout
             android:id="@+id/linearLayout2"
@@ -102,12 +107,17 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/ipPasswordLayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginHorizontal="10dp"
                 android:padding="5dp"
+                app:boxBackgroundMode="outline"
                 app:boxCornerRadiusBottomEnd="30dp"
+                app:errorEnabled="true"
+                app:errorIconDrawable="@null"
                 app:endIconMode="password_toggle"
+                app:helperTextTextColor="@color/red"
                 app:startIconDrawable="@drawable/baseline_password_24">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -115,6 +125,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Password"
+                    android:inputType="textPassword"
                     tools:ignore="HardcodedText" />
             </com.google.android.material.textfield.TextInputLayout>
 
